ofbiz patch: service: java: switch to ArrayList, fix warnings
* use ArrayList for core service code and long-lived models
* misc fixes: warnings and types

Refs https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/issues/548